Fix issue with join table loading